# Saucedemo_05

./: .gitignore  =  README.md  conf.py  conftest.py  index.html  lesson6_step4.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.allure-report/: 7ce1b430-2036-49dd-8c9f-9dd5e29f4113-container.json  855bc409-7291-469d-a0fa-2dda82061002-container.json  abcd298c-4350-4e57-b02e-a7187702f696-container.json  d3005473-a8c7-485b-bf9b-e1902cd6d654-result.json
.github/workflows/: action.yml  actions.yml  push.yml
75/export/: influxDbData.txt
76/export/: influxDbData.txt
77/export/: influxDbData.txt
78/export/: influxDbData.txt
79/export/: influxDbData.txt
80/export/: influxDbData.txt
81/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/: 0e308b22-d7a1-466b-a7dc-82d50f573783-container.json  327f7548-facd-43c0-8e0c-39651a239f74-container.json  70d7902b-dde2-4b33-9c31-7adafc523376-container.json  edef1273-a4eb-400a-859d-dc7fa178f4e6-result.json
conf/: browser_config.py  users.py  website_config.py
pages/: base_page.py  inventory_page_kate.py  locators.py  login_page.py  login_page_my.py  products_page.py  sham.py
report/: report.html
resources/: data.py
tests/: conftest.py  test_Elina.py  test_cart_page.py  test_demo_kate.py  test_detailed_page.py  test_inventory.py  test_inventory_page.py  test_inventory_page_p1.py  test_login_page.py  test_overview_page.py  test_products_page.py  test_sample.py  test_sample1.py  test_your_info_page.py
utils/: utils.py
(+160 files in other folders)
