[tool.poetry]
name = "saucedemo-05"
version = "0.1.0"
description = ""
authors = ["akioikeda <principewar@live.com>"]
readme = "README.md"
packages = [{include = "saucedemo_05"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
black = "^22.10.0"
flake8 = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
numpy = "^1.23.4"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
